--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 .inputStyles {
-  @apply bg-slate-100 text-slate-600 dark:text-slate-200 rounded-lg p-3 outline-transparent border-2 border-transparent hover:border-violet-600 focus:border-violet-600 focus:outline-none transition dark:bg-slate-800;
+  @apply bg-slate-100 text-slate-600 dark:text-slate-200 rounded-lg p-3 outline-transparent border-2 border-transparent hover:border-teal-600 focus:border-teal-600 focus:outline-none transition dark:bg-slate-800;
 }
 
 .btn {
-  @apply bg-violet-600 hover:bg-violet-800 py-3 px-6 text-slate-50 rounded-lg w-auto transition dark:bg-violet-600 dark:hover:bg-violet-300;
+  @apply bg-teal-600 hover:bg-teal-800 py-3 px-6 text-slate-50 rounded-lg w-auto transition dark:bg-teal-600 dark:hover:bg-teal-300;
 }
 
 .btn:active {
@@ -45,7 +45,7 @@
     @apply bg-slate-200 w-full h-2 rounded-full overflow-hidden dark:bg-slate-700/[.3];
   }
   .barProgress > div {
-    @apply bg-violet-600 h-full;
+    @apply bg-teal-600 h-full;
   }
   .itemDirectory > .buttonsDir {
     @apply xl:opacity-0 transition opacity-100;
